# Claude-Monitor

./: .gitignore  animator_config.json  claude_animator.py  hook_sender.py  pyproject.toml  status_sender.py  test_animator.py
claude_monitor/: __init__.py  animator.py  hook.py  setup.py  status.py
